[JENKINS-42515] use correct icons for test pass / fail state; tweak spacing

--- a/blueocean-dashboard/src/main/less/testing.less
+++ b/blueocean-dashboard/src/main/less/testing.less
@@ -87,19 +87,22 @@
 
 .TestSummary {
     display: flex;
-    padding: 20px 40px;
+    padding: 16px 40px;
     background-color: #fff;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
     border-left: 6px solid;
     border-color: #78b037;
 
     .icon {
+        width: 80px;
+        height: 80px;
         flex-shrink: 0;
-        margin-right: 40px;
+        margin-right: 24px;
         vertical-align: bottom;
     }
 
     .content {
+        margin-top: 8px;
         flex-grow: 1;
     }
 
